SRV-1122: Enable https for jsonrpc service client and setup ssl accordingly
- transfer entire uri via the server service config
- set a hostname verifier
- add the "KNIME-API-Version" to the header

(SRV-1122 Remote Workflow Control doesn't work over https)
https://knime-com.atlassian.net/browse/SRV-1122